fix: improve article content spacing

--- a/src/components/post/CodeBlock.module.scss
+++ b/src/components/post/CodeBlock.module.scss
@@ -2,7 +2,7 @@
   background-color: var(--secondary-surface-color);
   border-radius: 5px;
   overflow: auto;
-  padding: 0 1rem 0 1rem;
+  padding: 1rem;
   > * {
     font-size: 0.8rem;
   }
