--- a/src/components/post/PostContent.module.scss
+++ b/src/components/post/PostContent.module.scss
@@ -1,15 +1,19 @@
 @import '../../styles/mixins/post.scss';
 
 .post-content {
+  * {
+    margin: 0;
+  }
+
   > * {
-    margin-bottom: 2rem;
+    margin-top: 2rem;
+    margin-bottom: 0rem;
   }
 
   // Headings
   @include headings {
     scroll-margin-top: 64px; // offset for fixed header
     line-height: 1.5;
-    margin-bottom: 0.5rem;
   }
 
   // paragraphs
@@ -50,9 +54,21 @@
   ul {
     li {
       padding-left: 1em;
+      padding-top: 0.5em;
     }
-    li:not(:first-child) {
-      padding-top: 1em;
-    }
+  }
+
+  // Spacing
+  > h1 + *,
+  > h2 + *,
+  > h3 + *,
+  > h4 + *,
+  > h5 + *,
+  > h6 + * {
+    margin-top: 0.5rem;
+  }
+  > p + ol,
+  > p + ul {
+    margin-top: 0;
   }
 }
